--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,13 +13,16 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+    - name: Installing Chrome
+    - uses: browser-actions/setup-chrome@latest
+    - run: chrome --version
     - name: Run
       run: |
         python main.py
